--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Vipin Raghavan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.9"
